// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EthRestakeVaultFactory EthErc20Vault private vault deployment with own escrow gas 1`] = `
Object {
  "calldataByteLength": 548,
  "gasUsed": 604587,
}
`;

exports[`EthRestakeVaultFactory EthErc20Vault private vault deployment with shared escrow gas 1`] = `
Object {
  "calldataByteLength": 548,
  "gasUsed": 455753,
}
`;

exports[`EthRestakeVaultFactory EthErc20Vault public vault deployment with own escrow gas 1`] = `
Object {
  "calldataByteLength": 548,
  "gasUsed": 580667,
}
`;

exports[`EthRestakeVaultFactory EthErc20Vault public vault deployment with shared escrow gas 1`] = `
Object {
  "calldataByteLength": 548,
  "gasUsed": 431833,
}
`;

exports[`EthRestakeVaultFactory EthRestakeVault private vault deployment with own escrow gas 1`] = `
Object {
  "calldataByteLength": 356,
  "gasUsed": 530474,
}
`;

exports[`EthRestakeVaultFactory EthRestakeVault private vault deployment with shared escrow gas 1`] = `
Object {
  "calldataByteLength": 356,
  "gasUsed": 381640,
}
`;

exports[`EthRestakeVaultFactory EthRestakeVault public vault deployment with own escrow gas 1`] = `
Object {
  "calldataByteLength": 356,
  "gasUsed": 506554,
}
`;

exports[`EthRestakeVaultFactory EthRestakeVault public vault deployment with shared escrow gas 1`] = `
Object {
  "calldataByteLength": 356,
  "gasUsed": 357720,
}
`;
